Validate the values on wallet

--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -159,14 +159,14 @@
         <div>
           <div class="form-group">
             <label for="ccn">Credit Card Number: </label>
-            <input class="form-control" placeholder="Credit Card Number" type="number" id="ccn" class="box" required />
+            <input id ="dummy-credit" class="form-control" placeholder="Credit Card Number" type="number" id="ccn" class="box" required />
 
-            <label for="ed">Expirency Date: </label>
-            <input class="form-control" placeholder="Expirency Date" type="month" id="ed" class="box" min="2021-02"
+            <label for="ed">Expiration Date: </label>
+            <input id ="dummy-date" class="form-control" placeholder="Expiration Date" type="month" id="ed" class="box" min="2021-02"
               min="100000000" max="999999999" required />
 
             <label for="sn">Security Number: </label>
-            <input class="form-control" placeholder="Security Number" type="number" id="sn" class="box" min="100"
+            <input id ="dummy-security" class="form-control" placeholder="Security Number" type="number" id="sn" class="box" min="100"
               max="999" required />
 
             <label for="am">Amount of Money £: </label>
