--- a/bikeshare/templates/bikeshareapp/register.html
+++ b/bikeshare/templates/bikeshareapp/register.html
@@ -23,8 +23,9 @@
 
 <body>
   <!-- Container for the form -->
+  <div style="height: 150px;"></div>
   <div class="container">
-    <h1>Let's Start</h1>
+    <h1 style="text-align: center;">Let's Start</h1>
     <form id="user-form" action="/register/" method="post">
       {% csrf_token %}
 
