--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -66,8 +66,6 @@
       <p class="text-center"> Don't have an account? please <a href="to_register/">click here</a> to register.</p>
     </form>
 
-    <!-- This should not exists, instead an alert should be displayed -->
-    <p>{{ info }}</p>
 
     {% load static %}
     <!-- Load scripts -->
@@ -76,5 +74,16 @@
 <script src="{% static "javascript/jquery-3.5.1.min.js"%}" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 <script src="{% static "javascript/alert-modal.js" %}"></script>
+
+<script>
+  // Getting the response and showing a different alert depending on it
+  var responseStatus = "{{ info }}"
+  if (responseStatus == 1) {
+    callModalAlert("ERROR", "Wrong user or password")
+  }
+  else if (responseStatus == 2) {
+    callModalAlert("ERROR", "User does not exist. Please register")
+  }
+</script>
 
 </html>
