--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -52,12 +52,12 @@
       <!-- Username field -->
       <div>
         <label for="username">User Name</label>
-        <input type="text" id="username" name="userid" class="u-full-width" />
+        <input type="text" id="username" name="userid" class="u-full-width" required/>
       </div>
       <!-- Password field -->
       <div>
         <label for="pwd">PassWord</label>
-        <input type="password" id="pwd" name="password" class="u-full-width" />
+        <input type="password" id="pwd" name="password" class="u-full-width" required/>
       </div>
       <!-- Button to submit the fields -->
       <div>
